--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12.6"
 dependencies = [
     "fastapi>=0.124.4",
-    "moviepy==1.0.3",
+    "jinja2>=3.1.6",
     "pytubefix>=10.3.6",
     "pywebview>=6.1",
+    "requests>=2.32.5",
+    "uvicorn>=0.38.0",
 ]
