--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12.6"
 dependencies = [
+    "dash-iconify>=0.1.2",
+    "dash[async]>=3.3.0",
     "fastapi>=0.124.4",
     "jinja2>=3.1.6",
     "pytubefix>=10.3.6",
     "pywebview>=6.1",
     "requests>=2.32.5",
     "uvicorn>=0.38.0",
+    "waitress>=3.0.2",
 ]
